--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "frontend",
+  "name": "isa-frontend",
   "version": "1.0.0",
+  "description": "",
   "main": "app.js",
   "dependencies": {
     "accepts": "^1.3.8",
@@ -200,6 +201,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "description": ""
+  "license": "ISC"
 }
