Update start script to serve files from root

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "http-server ./public -p $PORT"
+    "start": "http-server ./ -p $PORT"
   },
   "keywords": [],
   "author": "",
